--- a/Housing21UI/Pages/PersonForm.cshtml
+++ b/Housing21UI/Pages/PersonForm.cshtml
@@ -1,23 +1,29 @@
 ﻿@page
 @model Housing21UI.Pages.PersonFormModel
 @{
-    <form method="post">
-    <div>
-        <label asp-for="Name"></label>
-        <input asp-for="Name" />
+    ViewBag.Title = "Person Form";
+}
+<h1>Please fill out:</h1>
+<form method="post">
+    <div class="custom-form-group">
+        <label asp-for="Person.Name"></label>
+        <input asp-for="Person.Name" />
+        <span asp-validation-for="Person.Name"></span>
     </div>
-    <div>
-        <label asp-for="Email"></label>
-        <input asp-for="Email" />
+    <div class="custom-form-group">
+        <label asp-for="Person.Email"></label>
+        <input asp-for="Person.Email" />
+        <span asp-validation-for="Person.Email"></span>
     </div>
-    <div>
-        <label asp-for="TelephoneNumber"></label>
-        <input asp-for="TelephoneNumber" />
+    <div class="custom-form-group">
+        <label asp-for="Person.TelephoneNumber"></label>
+        <input asp-for="Person.TelephoneNumber" />
+        <span asp-validation-for="Person.TelephoneNumber"></span>
     </div>
-    <div>
-        <label asp-for="DateOfBirth"></label>
-        <input asp-for="DateOfBirth" />
+    <div class="custom-form-group">
+        <label asp-for="Person.DateOfBirth"></label>
+        <input asp-for="Person.DateOfBirth" type="date" />
+        <span asp-validation-for="Person.DateOfBirth"></span>
     </div>
     <button type="submit">Submit</button>
 </form>
-}
