Fix minor css bug

--- a/Housing21UI/Pages/People.cshtml
+++ b/Housing21UI/Pages/People.cshtml
@@ -26,4 +26,4 @@
 <form method="post">
     <button type="submit" asp-page-handler="ExportToCSV">Export CSV</button>
 </form>
-<a asp-page="/PersonForm" style="display: block; margin-top: 20px;">Back</a>
+<a asp-page="/PersonForm" style="display: inline-block; margin-top: 20px;">Back</a>
