--- a/Housing21UI/Pages/PersonForm.cshtml
+++ b/Housing21UI/Pages/PersonForm.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Person Form";
 }
 <h1>Please fill out:</h1>
-<form method="post">
+<form method="post" class="person-form">
     <div class="custom-form-group">
         <label asp-for="Person.Name"></label>
         <input asp-for="Person.Name" />
