--- a/Housing21UI/Pages/Shared/_Layout.cshtml
+++ b/Housing21UI/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/Housing21UI.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <div class="container">
+    <div class="container custom-container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
