--- a/Housing21UI/wwwroot/css/site.css
+++ b/Housing21UI/wwwroot/css/site.css
@@ -19,9 +19,25 @@ body {
 
 /* ||| CUSTOM CSS ||| */
 
+.custom-container {
+    background-color: white;
+    border-radius: 0px 0px 15px 15px;
+    box-shadow: rgba(0,0,0,0.6);
+    padding: 60px 40px 20px 40px;
+}
+
+body {
+    background-color: #003b64;
+}
+
+h1 {
+    margin-bottom: 30px;
+}
+
 /* Form */
 input {
     display: block;
+    width: 100%;
     border: 2px solid grey;
     border-radius: 15px;
     padding: 5px 15px;
@@ -36,7 +52,7 @@ label::after {
 }
 
 .custom-form-group {
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 
 button[type=submit] {
@@ -56,7 +72,9 @@ button[type=submit]:hover {
 }
 
 /* Table */
-table, th, td {
+table {
+    margin-bottom: 15px;
+    width: 100%;
 }
 
 th:last-child {
@@ -100,4 +118,13 @@ input.input-validation-error {
 span.field-validation-error {
     color: red;
     margin-top: 2px;
+}
+
+/* Breakpoints */
+
+/* Phone */
+@media only screen and (min-width: 576px) {
+    form {
+        max-width: 500px;
+    }
 }
