--- a/Housing21UI/wwwroot/css/site.css
+++ b/Housing21UI/wwwroot/css/site.css
@@ -14,7 +14,8 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: "Open Sans", sans-serif;
 }
 
 /* ||| CUSTOM CSS ||| */
@@ -32,6 +33,7 @@ body {
 
 h1 {
     margin-bottom: 30px;
+    color: #003b64;
 }
 
 /* Form */
