--- a/Housing21UI/wwwroot/css/site.css
+++ b/Housing21UI/wwwroot/css/site.css
@@ -24,7 +24,7 @@ body {
     background-color: white;
     border-radius: 0px 0px 15px 15px;
     box-shadow: rgba(0,0,0,0.6);
-    padding: 60px 40px 20px 40px;
+    padding: 60px 40px 30px 40px;
 }
 
 body {
@@ -32,7 +32,7 @@ body {
 }
 
 h1 {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     color: #003b64;
 }
 
@@ -50,9 +50,9 @@ input {
     padding: 5px 15px;
 }
 
-input:focus {
-    outline: 2px grey solid;
-}
+    input:focus {
+        outline: 2px #0194d3 solid;
+    }
 
 label::after {
     content: ":";
@@ -63,20 +63,20 @@ label::after {
 }
 
 button[type=submit] {
-    background-color: grey;
+    background-color: #0194d3;
     color: white;
     font-weight: 700;
     border-radius: 15px;
-    border: 2px grey solid;
+    border: 2px #0194d3 solid;
     padding: 6px 20px;
     margin-top: 15px;
 }
 
-button[type=submit]:hover {
-    background-color: darkgrey;
-    border-color: darkgrey;
-    box-shadow: rgba(0, 0, 0, .5) 0px 0px 5px;
-}
+    button[type=submit]:hover {
+        background-color: #0086bf;
+        border-color: #0086bf;
+        box-shadow: rgba(0, 0, 0, .5) 0px 0px 5px;
+    }
 
 /* Table */
 table {
@@ -105,9 +105,9 @@ th, td {
 }
 
 th {
-    background-color: grey;
+    background-color: #0194d3;
     color: white;
-    padding: 10px 20px;
+    padding: 12px 20px 10px 20px;
 }
 
 td:first-child {
